add specific types for performance